--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@ layout: default
 
 <div class="home">
 
-<p>Hello there, and welcome to my homepage!<br><br>My name is &lt;your name here&gt;, and I am a &lt;designation&gt; at &lt;university name&gt;. You can add more details here, such as the most recent affiliation to a research group, etc.<br><br>
+<p>Hello there, and welcome to my homepage!<br><br>I am an Assistant Professor of Operations, Information, and Decisions at The Wharton School, University of Pennsylvania. 
+  My research focuses on the design of online marketplaces using data, stochastic models, and game theory. I am passionate about solving problems to help improve access to EVs for low-income individuals and sharing assets in emerging assets, incentivizing consumers to reduce peak grid loads. 
+  I am also interested in understanding how LLMs are impacting knowledge-sharing networks. 
+My research has been recognized and selected as a finalist for the IBM Best Student Paper, the IBM Service Science Best Cluster Paper, and I won the best student presentation in INFORMS. Previously, I completed my PhD in Operations Research at The Kellogg School, Northwestern University in 2023. I also teach undergraduate elective, OIDD 2200: Operations Management Analytics in Spring.<br><br>
 
-I maintain a list of my publications, research projects and implementations under the <a href="/research/">Research</a> tab, and a list of other non-research projects under the <a href="/projects">Projects</a> tab. You may also check out my <a href="">Github profile.</a><br><br>
+I maintain a list of my publications, research projects, and implementations under the <a href="/research/">Research</a> tab, and a list of other non-research projects under the <a href="/projects">Projects</a> tab. You may also check out my <a href="">Github profile.</a><br><br>
 
 To get a better insight on my life so far, you can have a look at my <a href="/cv">curriculum vitae</a>. I blog (although quite less frequently) and pin them down <a href="/blog">here</a>. Feel free to read a bit more <a href="/about">about me</a>.</p>
 
